--- a/app/views/posts/_disqus.html.erb
+++ b/app/views/posts/_disqus.html.erb
@@ -2,11 +2,12 @@
 <script>
    var disqus_config = function () {
       this.page.url = '<%= url_for([@post, {only_path: false}]) %>';
-      this.page.identifier = '<%= @post.id %>';
+      this.page.identifier = '<%= @post.id%><%=@post.title %>';
       this.page.title = '<%= @post.title %>';
    };
 
   (function() {  // DON'T EDIT BELOW THIS LINE
+
     var d = document, s = d.createElement('script');
 
     s.src = '//profileblog.disqus.com/embed.js';
