Setup and style basic project functionality

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,11 +29,9 @@
   <div class="col-3 homepage_content">
     <h2>Stuff I've Built</h2>
     <hr>
-    <h3><a href="#">Example Text</a></h3>
-    <p class="date">Monday December 14</p>
-    <h3><a href="#">Example Text 2</a></h3>
-    <p class="date">Monday December 14</p>
-    <h3><a href="#">Example Text 3</a></h3>
-    <p class="date">Monday December 14</p>
+    <% @projects.each do |project| %>
+      <h3><%= link_to project.title, project %></h3>
+      <p class="date"><%= project.created_at.strftime("%A, %b %d") %></p>
+    <% end %>
   </div>
 </div>
