--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -22,6 +22,11 @@
       margin: 3em auto;
     }
   }
+  h2{
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 2em;
+  }
 }
 
 // --------- Post Show
@@ -76,6 +81,9 @@
     font-size: .8em;
     text-transform: uppercase;
     text-decoration: none;
+    &:hover{
+      color: $highlight;
+    }
   }
 }
 
