--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -1,11 +1,21 @@
 <h1 id="page_title">Stuff I've Built</h1>
 
 <div id="posts_wrapper" class="skinny_wrapper">
-  <% @projects.each do |project| %>
-      <div class="post">
-        <p class="date"><%= project.created_at.strftime('%A, %B %d')%></p>
-        <h2><%= link_to project.title, project %></h2>
-        <hr>
+  <% if @projects.empty? %>
+      <h2>Nothing to show here</h2>
+  <% else %>
+    <% @projects.each do |project| %>
+        <div class="post">
+          <p class="date"><%= project.created_at.strftime('%A, %B %d')%></p>
+          <h2><%= link_to project.title, project %></h2>
+          <hr>
+        </div>
+    <% end %>
+   <% end %>
+
+  <% if user_signed_in? %>
+      <div id="admin_links">
+        <%= link_to "New Project", new_project_path %>
       </div>
   <% end %>
 </div>
